--- a/stream/css/share.css
+++ b/stream/css/share.css
@@ -1,27 +1,44 @@
 /**************************************************
+  1. BODY*
   1. HEADER
   2. VIDEO
   3. FOOTER
 
  ***************************************************/
+/* 1. BODY */
 
-/* 1. HEADER */
-
-header{
-  color: beige;
+html, body{
+  padding: 0;
+  margin: 0;
   background-color: black;
 }
 
+/* 2. HEADER */
 
+header{
+  color: beige;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* 3. VIDEO */
 
 #videos {
   background-color: gray;
-  width: auto;
+  width: 100vw;
   height: 80vh;
+  border: 3px blue solid;
+  margin-top: 10px;
 }
 
 footer {
   background-color: black;
+  color: white;
   width: auto;
   height: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 10px;
 }
