--- a/stream/css/share.css
+++ b/stream/css/share.css
@@ -24,10 +24,16 @@ header{
 
 /* 3. VIDEO */
 
+section{
+  display: flex;
+  justify-content: center;
+  padding: 25px
+}
+
 #videos {
   background-color: gray;
-  width: 100vw;
-  height: 80vh;
+  width: 80vw;
+  height: 70vh;
   border: 3px blue solid;
   margin-top: 10px;
 }
@@ -38,7 +44,5 @@ footer {
   width: auto;
   height: 50px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 10px;
+  justify-content: center;
 }
