--- a/stream/css/share.css
+++ b/stream/css/share.css
@@ -32,8 +32,8 @@ section{
 
 #videos {
   background-color: gray;
-  width: 80vw;
-  height: 70vh;
+  width: 866px;
+  height: 480px;
   border: 3px blue solid;
   margin-top: 10px;
 }
