--- a/stream/css/share.css
+++ b/stream/css/share.css
@@ -32,10 +32,9 @@ section{
 
 #videos {
   background-color: gray;
-  width: 866px;
-  height: 480px;
   border: 3px blue solid;
   margin-top: 10px;
+  display: flex;
 }
 
 footer {
