--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ button {
   justify-content: center;
   border-radius: 5px;
   height: 40px;
+  border: none;
+  box-shadow: 3px 3px 12px #282A36;
   font-size: 20px;
 }
 
@@ -39,6 +41,7 @@ a {
   width: 250px;
   margin-left: auto;
   margin-right: auto;
+  text-decoration: none;
 }
 
 a + a {
