--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,10 @@ div.buttonshare {
   height: 30px;
 }
 
+button:hover {
+  cursor: pointer;
+}
+
 section{
   display: flex;
   justify-content: center;
@@ -51,12 +55,19 @@ span {
 }
 
 video {
-  border: 3px solid #FF6161;
   padding: 0;
   max-width: 80vw;
   background-color: gray;
-  margin: 10px 0 0;
   display: flex;
+  justify-content: center;
+}
+
+.watch {
+  border: 3px solid #8AFF80;
+}
+
+.share {
+  border: 3px solid #FF6161;
 }
 
 footer {
